--- a/secciones/pagina5.html
+++ b/secciones/pagina5.html
@@ -59,24 +59,40 @@
         <div>
             <h3>Contáctese los 365 días del año!!!</h3>
         </div>
-            <form action="" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="" method="POST" enctype="application/x-www-form-urlencoded">
+            <div>
                 <div>
-                <label for="name">Nombre:</label>
-                <input type="text" name="name" placeholder="Nombre">
+                    <label for="name">Nombre:</label>
+                    <input type="text" name="name" placeholder="Nombre">
                 </div>
                 <label for="lastName">Apellido:</label>
                 <input type="text" name="lastName" placeholder="Apellido">
+                <label for="age">Edad:</label>
+                <input type="number" name="age" min="18" max="99">
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" name="email" required>
+            </div>
+            <br>
+            <div>
                 <div>
-                <label for="comment">Comentarios:</label>
-                <br>
-                <textarea name="comment" cols="30" rows="10" placeholder="Deja tus comentarios"></textarea>
+                    <label for="forma">Cómo nos conociste?: </label>
+                    <select name="">
+                        <option value="Facebook">Facebook</option>
+                        <option value="Instagram">Instagram</option>
+                        <option value="Recomendación">Recomendación</option>
+                        <option value="Publicidad">Publicidad en redes</option>
+                        <option value="Otro">Otro</option>
+                    </select>
                 </div>
-                <input type="submit" value="Enviar Información">
-                <input type="reset" value="Limpiar Valores">
-                <input type="button" value="Sin acciones">
-            </form>
+                <br>
+                <div>
+                    <label for="comment">Dejanos tu consulta:</label>
+                    <br>
+                    <textarea name="comment" cols="50" rows="10" placeholder="Deja tu consulta"></textarea>
+                </div>
+                <input type="submit" value="Enviar Consulta">
+                <input type="reset" value="Limpiar Formulario">
+        </form>
     <footer>
         <div class="pieFooter">
             <h3><a href="../index.html"><img src="../multimedia/homech.jpg"></a></h3>
