[UPDATE] Se modificó frase sobre las Areas Legales en index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </a>
             </div>
             <div id="aReas">
-                <h2> Nuestras áreas de servicios son muy amplias, y contamos  con los mejores profesionales.</h2>
+                <h2> Disponemos de todas las areas legales y contamos  con los mejores profesionales.</h2>
             </div>
             <div id="main">
                 <article class="aBonos">ASESORAMIENTO INTEGRAL:<p class="formatoItalica"> Asesoramiento legal personalizado para individuos y PYMES. Patrocinio en Provincia de Buenos Aires y CABA.</p></article>
