[UPDATE] Se realizó modificación tamaño de fotos

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
     </main> 
         <div>
-            <h1 class="paraTransicion"> Estudio Jurídico Guillermo Sapag.</h1>
+            <h1 class="paraTransicion"> Estudio Jurídico Sapag.</h1>
         </div>
         <div id="carouselExampleControls" class="carousel slide col-md-7 container" data-ride="carousel">
             <div class="carousel-inner">
@@ -128,18 +128,6 @@
                 </div>
                 </div>
                 </div>
-                <section>
-                    <h1>Abonos</h1>
-                    <p class= "bg-1">
-                    Disponemos de abonos a medida para todas las Pymes, adaptables a sus necesidades.
-                    </p>
-                    <p class= "bg-2">
-                    Abonos que otorgan asistencia legal en cuanto a los reclamos laborales en su Pyme. 
-                    </p>
-                    <p class= "bg-1">
-                    Abonos que otorgan asistencia legal en cuanto a reclamo a Proveedores.
-                    </p>
-                </section>
     <footer>
         <div class="pieFooter">
             <h3><a href="./index.html"><img src="./multimedia/homech.jpg"></a></h3>
