[ADD] Se agregó boton en index y grilla de Abonos en Laboral

--- a/secciones/pagina3.html
+++ b/secciones/pagina3.html
@@ -55,25 +55,101 @@
                     <img src="../multimedia/lab3.jpg">
                 </div>
             </div>
-            <section class="contenedor">
-                <div class="tNegro">
-                    <img class="tDivorcio__img" src="../multimedia/trabajoennegro.jpg" alt="">
-                    <div>
-                        <h3 class="tNegro__titulo">
-                        TRABAJO EN NEGRO
-                        </h3>
-                        <p class="tNegro__parrafo">
-                            <ul>
-                                <li>
-                                    Protegemos tus derechos.
-                                </li>
-                                <li>
-                                    Si estas trabajando en Negro, llamanos.
-                                </li>
-                            </ul>
-                    </div>
+            <h3 class="paraTransicion">Tenemos 3 tipos de abonos en Laboral, conocelos:</h3>
+        </section> 
+        <div class="wrapper">
+            <div class="table basic">
+              <div class="price-section">
+                <div class="price-area">
+                  <div class="inner-area">
+                    <span class="text"></span>
+                    <span class="price"></span>
+                  </div>
                 </div>
-            </section> 
+              </div>
+              <div class="package-name"></div>
+              <ul class="features">
+                <li>
+                  <span class="list-name">Confección de contestaciones laborales.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Confección de sanciones al personal.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Seguimiento de casos.</span>
+                  <span class="icon cross"><i class="fas fa-times"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Confección de contratos laborales.</span>
+                  <span class="icon cross"><i class="fas fa-times"></i></span>
+                </li>
+              </ul>
+              <div class="btn"><button>Ponete en contacto</button></div>
+            </div>
+            <div class="table premium">
+              <div class="ribbon"><span>Mas Buscado</span></div>
+              <div class="price-section">
+                <div class="price-area">
+                  <div class="inner-area">
+                    <span class="text"></span>
+                    <span class="price"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="package-name"></div>
+              <ul class="features">
+                <li>
+                  <span class="list-name">Confección de contestaciones laborales.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Confección de documentación laboral.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Seguimiento de casos.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Representación  en SECLO.</span>
+                  <span class="icon cross"><i class="fas fa-times"></i></span>
+                </li>
+              </ul>
+              <div class="btn"><button>Ponete en contacto</button></div>
+            </div>
+            <div class="table ultimate">
+              <div class="price-section">
+                <div class="price-area">
+                  <div class="inner-area">
+                    <span class="2"></span>
+                    <span class="price"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="package-name"></div>
+              <ul class="features">
+                <li>
+                  <span class="list-name">Asesoramiento integral.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Charlas mensuales.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Representación en Seclo.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+                <li>
+                  <span class="list-name">Representación judicial.</span>
+                  <span class="icon check"><i class="fas fa-check"></i></span>
+                </li>
+              </ul>
+              <div class="btn"><button>Ponete en contacto</button></div>
+            </div>
+          </div>
     <footer>
         <div class="pieFooter">
             <h3><a href="../index.html"><img src="../multimedia/homech.jpg"></a></h3>
