--- a/index.html
+++ b/index.html
@@ -98,9 +98,15 @@
                 <article class="aBonos">ASESORAMIENTO INTEGRAL:<p class="formatoItalica"> Asesoramiento legal personalizado para individuos y PYMES. Patrocinio en Provincia de Buenos Aires y CABA.</p></article>
                 <article class="aBonos">AMPLIA COBERTURA <p class="formatoItalica"> Realizamos cobertura los 365 días del año, representando a nuestros clientes en todas las áreas.</p></article>
             </div>
-            <div class="eSpecialistas">
-                <h1>Somos Especialistas en Derecho Civil:</h1>
-            </div>
+            <div class="wrapp">
+                <div class="static-txt">Somos especialistas en</div>
+                <ul class="dynamic-txts">
+                  <li><span>Alimentos</span></li>
+                  <li><span>Divorcios</span></li>
+                  <li><span>Sucesiones</span></li>
+                  <li><span>Desalojos</span></li>
+                </ul>
+              </div>
             <div class="row">
                 <div class="col-md-4">
                 <div class="thumbnail">
@@ -127,6 +133,9 @@
                     </div>
                 </div>
                 </div>
+                </div>
+                <div class="btn">
+                    <a href="./secciones/pagina5.html"><span><h3>Contactános</h3></span></a>
                 </div>
     <footer>
         <div class="pieFooter">
