[UPPDATE] Nav Bar mod and uppdate grid img

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main> 
+    <main>
         <header class="topheader">
             <nav class="topnav">
                 <a href="#" class="logo">
-                <img src="./multimedia/logoguillermosapag.jfif">
+                <img src="./multimedia/logoguillermosapag.jfif"/>
                 </a>
                     <ul class="menu">
                         <li><a href="./index.html">Home</a></li>
@@ -66,7 +66,7 @@
                     </ul>
             </nav>
         </header>
-    </main> 
+    </main>
         <div>
             <h1 class="paraTransicion"> Estudio Jurídico Sapag.</h1>
         </div>
