[UPPDATE] Modificated all pages

--- a/secciones/pagina5.html
+++ b/secciones/pagina5.html
@@ -44,7 +44,7 @@
             </div>
         <div class="grid-eLcontacto">
             <div class="bannerUno">
-                <h1> Nuestras Redes Sociales:</h1>
+                <h1> Nuestras Redes:</h1>
             </div>
             <div class="tWiter">
                 <h3> <a href="https://twitter.com/home?lang=es"target= "_BLANK"><img src= "../multimedia/tterchico.jpg"></a></h3>
@@ -101,4 +101,5 @@
     </footer>
 </body>
 </html>
+
 
