[ADD] Add photos Section Penal and uppdate project

--- a/index.html
+++ b/index.html
@@ -101,42 +101,26 @@
             <div class="wrapp">
                 <div class="static-txt">Somos especialistas en</div>
                 <ul class="dynamic-txts">
-                  <li><span>Alimentos</span></li>
+                  <li><span>Informática</span></li>
+                  <li><span>Robos/Hurtos</span></li>
                   <li><span>Divorcios</span></li>
-                  <li><span>Sucesiones</span></li>
-                  <li><span>Desalojos</span></li>
+                  <li><span>Despidos</span></li>
                 </ul>
               </div>
-            <div class="row">
-                <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="./multimedia/violencia.jpg" alt="Lights" style="width:100%">
-                    <div class="caption">
-                        <h3>Violencia Familiar</h3>
-                    </div>
+            <div class="dElitos">
+                <div>
+                    <img src="../multimedia/violencia7.jpg">
                 </div>
+                <div>
+                    <img src="../multimedia/violencia8.jpg">
                 </div>
-                <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="./multimedia/divorcios.jpg" alt="Nature" style="width:100%">
-                    <div class="caption">
-                        <h3>Divorcios</h3>
-                    </div>
-                    </a>
+                <div>
+                    <img src="../multimedia/violencia3.jpg">
                 </div>
-                </div>
-                <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="./multimedia/cuota.jpg" alt="Fjords" style="width:100%">
-                    <div class="caption">
-                        <h3>Cuota Alimentaria</h3>
-                    </div>
-                </div>
-                </div>
-                </div>
-                <div class="btn">
-                    <a href="./secciones/pagina5.html"><span><h3>Contactános</h3></span></a>
-                </div>
+            </div> 
+            <div class="btn">
+                <a href="./secciones/pagina5.html"><span><h3>Contactános</h3></span></a>
+            </div>
     <footer>
         <div class="pieFooter">
             <h3><a href="./index.html"><img src="./multimedia/homech.jpg"></a></h3>
@@ -153,4 +137,3 @@ crossorigin="anonymous"></script>
 integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
-
