--- a/secciones/pagina4.html
+++ b/secciones/pagina4.html
@@ -46,13 +46,13 @@
             </div>
                 <div class="dElitos">
                     <div>
-                        <img src="../multimedia/violencia7.jpg">
+                        <img src="../multimedia/penalfoto1.jpg">
                     </div>
                     <div>
-                        <img src="../multimedia/violencia8.jpg">
+                        <img src="../multimedia/penalfoto2.jpg">
                     </div>
                     <div>
-                        <img src="../multimedia/violencia3.jpg">
+                        <img src="../multimedia/penalfoto3.jpg">
                     </div>
                 </div> 
                 <section class="contenedor">
