[UPPDATE] Index images and Dynamic Text

--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
                 <div class="static-txt">Somos especialistas en</div>
                 <ul class="dynamic-txts">
                   <li><span>Informática</span></li>
-                  <li><span>Robos/Hurtos</span></li>
+                  <li><span>Desalojos</span></li>
                   <li><span>Divorcios</span></li>
-                  <li><span>Despidos</span></li>
+                  <li><span>Rubos/Hurtos</span></li>
                 </ul>
               </div>
             <div class="dElitos">
                 <div>
-                    <img src="../multimedia/violencia7.jpg">
+                    <img src="./multimedia/violencia7.jpg">
                 </div>
                 <div>
-                    <img src="../multimedia/violencia8.jpg">
+                    <img src="./multimedia/violencia3.jpg">
                 </div>
                 <div>
-                    <img src="../multimedia/violencia3.jpg">
+                    <img src="./multimedia/violencia8.jpg">
                 </div>
             </div> 
             <div class="btn">
