[UPPDATE] Se modificó boton de contacto y formulario

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
     </main>
         <div>
-            <h1 class="paraTransicion"> Estudio Jurídico  Sapag.</h1>
+            <h1 class="paraTransicion"> Estudio Jurídico Sapag.</h1>
         </div>
         <div id="carouselExampleControls" class="carousel slide col-md-7 container" data-ride="carousel">
             <div class="carousel-inner">
@@ -119,7 +119,7 @@
                 </div>
             </div> 
             <div class="btn">
-                <a href="./secciones/pagina5.html"><span><h3>Contactános</h3></span></a>
+                <a href="./secciones/pagina5.html"><span><h3>Contacto</h3></span></a>
             </div>
     <footer>
         <div class="pieFooter">
