--- a/secciones/pagina5.html
+++ b/secciones/pagina5.html
@@ -92,6 +92,7 @@
                 </div>
                 <input type="submit" value="Enviar Consulta">
                 <input type="reset" value="Limpiar Formulario">
+            </div>
         </form>
     <footer>
         <div class="pieFooter">
