[UPPDATE] Modified section Laboral

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 <article class="aBonos">AMPLIA COBERTURA <p class="formatoItalica"> Realizamos cobertura los 365 días del año, representando a nuestros clientes en todas las áreas.</p></article>
             </div>
             <div class="wrapp">
-                <div class="static-txt">Somos especialistas en</div>
+                <div class="static-txt">Somos especialistas en: </div>
                 <ul class="dynamic-txts">
                   <li><span>Informática</span></li>
-                  <li><span>Desalojos</span></li>
+                  <li><span>Alimentos</span></li>
                   <li><span>Divorcios</span></li>
                   <li><span>Rubos/Hurtos</span></li>
                 </ul>
