--- a/secciones/pagina3.html
+++ b/secciones/pagina3.html
@@ -135,7 +135,7 @@
                   <span class="icon check"><i class="fas fa-check"></i></span>
                 </li>
                 <li>
-                  <span class="list-name">Charlas mensuales.</span>
+                  <span class="list-name">Charlas mensuales de orientación a personal.</span>
                   <span class="icon check"><i class="fas fa-check"></i></span>
                 </li>
                 <li>
@@ -143,7 +143,7 @@
                   <span class="icon check"><i class="fas fa-check"></i></span>
                 </li>
                 <li>
-                  <span class="list-name">Representación judicial.</span>
+                  <span class="list-name">Representación judicial causas en Capital Federal y Provincia.</span>
                   <span class="icon check"><i class="fas fa-check"></i></span>
                 </li>
               </ul>
