--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
     </main>
         <div>
-            <h1 class="paraTransicion"> Estudio Jurídico Sapag</h1>
+            <h1 class="paraTransicion"> Estudio Jurídico Dr. Sapag</h1>
         </div>
         <div id="carouselExampleControls" class="carousel slide col-md-7 container" data-ride="carousel">
             <div class="carousel-inner">
